# bongchun-agent

./: .gitignore  LICENSE  README.md  client.py  example.config.py  example.env  example.mcp_config.json  gui.py  main.py  pyproject.toml  stt_service.py  terminal_executor_server.py
prompt/: default.txt
src/bongchun_agent/: __init__.py  app.py  app_config.py  app_controller.py  client.py  gui.py  hotkey_manager.py  prompt_manager.py  stt_service.py  utils.py
