[project]
name = "boncghun-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "faster-whisper>=1.1.1",
    "mcp[cli]>=1.6.0",
    "numpy>=2.2.5",
    "openai-whisper>=20240930",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.1.0",
    "requests",
    "sounddevice>=0.5.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "pynput>=1.8.1",
    "google-cloud-speech>=2.32.0",
    "google-genai>=1.12.1",
    "pyperclip>=1.9.0",
    "pyqt6>=6.9.0",
]

[tool.uv.workspace]
members = ["boncghun_agent"]
